Add ignore option to discovery flow

--- a/custom_components/rtl_433_discoverandsubmit/translations/en.json
+++ b/custom_components/rtl_433_discoverandsubmit/translations/en.json
@@ -7,5 +7,8 @@
                 "description": "Discovered device \"{model}\" with id {id}. Sensors: {sensors}. Add to Home Assistant?"
             }
         }
+    },
+    "abort": {
+        "user_declined": "Device was ignored"
     }
 }
